# ALIAS-Game

./: CMakeLists.txt  README.md  addword.cpp  addword.h  addword.ui  alias.cpp  alias.h  alias.ui  duration_score.cpp  duration_score.h  duration_score.ui  game.cpp  game.h  game.ui  main.cpp  play.cpp  play.h  play.ui  rules.cpp  rules.h  teams_name.cpp  teams_name.h  teams_name.ui  words.txt
